# trustless

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  hk.pkl  mise.toml  release-plz.toml
.github/actions/setup/: action.yml
.github/sts-cat/: release.sts.toml
.github/workflows/: _release-bundle.yml  _release.yml  _test.yml  binaries.yml  ci.yml  pr.yml  release-bundle.yml  release-plz-pr.yml  release-plz.yml
docs/: filesystem-provider.md  internal.md  key-provider-protocol.md  lambda-provider.md  plaintext.md  routing.md  tls12.md  writing-key-provider.md
docs/specs/: 001-protocol.md  002-config.md  003-remote-signer.md  004-proxy-service.md  005-provider-registry.md  006-proxy-lifecycle.md  007-aws-lambda-provider.md  breakdown.md
trustless/: CHANGELOG.md  Cargo.toml
trustless-backend-lambda/: Cargo.toml
trustless-backend-lambda/src/: config.rs  error.rs  handler.rs  main.rs  state.rs
trustless-backend-lambda/terraform/: outputs.tf
trustless-protocol/: CHANGELOG.md  Cargo.toml
trustless-protocol/src/: base64.rs  client.rs  codec.rs  error.rs  handler.rs  lib.rs  message.rs  process.rs  scheme.rs
trustless-protocol/src/provider_helpers/: backend.rs  blob_check.rs  certificate.rs  encrypted_key.rs  mod.rs
trustless-protocol/tests/: handler_client.rs
trustless-provider-failure/: Cargo.toml  README.md
trustless-provider-failure/src/: main.rs
trustless-provider-filesystem/: CHANGELOG.md  Cargo.toml
trustless-provider-filesystem/src/: main.rs
trustless-provider-lambda/: CHANGELOG.md  Cargo.toml
trustless-provider-lambda-function/: Cargo.toml
trustless-provider-lambda-function/src/: error.rs  handler.rs  main.rs  state.rs
trustless-provider-lambda-function/terraform/: main.tf  variables.tf  versions.tf
trustless-provider-lambda/src/: main.rs
trustless-provider-stub/: Cargo.toml
trustless-provider-stub/src/: main.rs
trustless/examples/: provider_client.rs  proxy.rs  tls_server.rs
trustless/src/: config.rs  domain.rs  error_page.rs  framework.rs  lib.rs  main.rs  ppid.rs  provider.rs  proxy.rs  route.rs  signer.rs
trustless/src/cmd/: exec.rs  get.rs  list.rs  mod.rs  proxy.rs  route.rs  run.rs  setup.rs  status.rs  test_provider.rs
trustless/src/control/: client.rs  mod.rs  server.rs  state.rs
trustless/src/provider/: mod.rs  orchestrator.rs  process.rs  registry.rs  supervisor.rs
trustless/src/templates/: 404.html  404.txt  502.html  508.html  layout.html  status.html
trustless/tests/: control.rs  proxy.rs  signer.rs
