[package]
name = "trustless-backend-lambda"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
trustless-protocol = { workspace = true, features = ["provider-helpers", "encrypted-key"] }
lambda_runtime = "1.1.0-rc1"
aws-sdk-s3 = "1"
aws-sdk-ssm = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
secrecy = "0.10"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
rustls-pki-types.workspace = true

[dev-dependencies]
trustless-protocol = { workspace = true, features = ["test-helpers"] }
rcgen.workspace = true
aws-smithy-mocks = "0.2"
aws-sdk-s3 = { version = "1", features = ["test-util"] }
aws-sdk-ssm = { version = "1", features = ["test-util"] }
aws-smithy-types = "1"
