[package]
name = "trustless-protocol"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["std"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["base64"] }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "sync", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
