[package]
name = "trustless-protocol"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[features]
provider-helpers = ["dep:rustls-pki-types", "dep:x509-parser", "rustls/aws_lc_rs"]
encrypted-key = ["provider-helpers", "dep:pkcs8", "dep:aes", "dep:cbc", "dep:cipher", "dep:md-5", "dep:base64ct"]

[dependencies]
bytes = "1"
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-pki-types = { version = "1", features = ["std"], optional = true }
x509-parser = { version = "0.16", optional = true }
pkcs8 = { version = "0.10", features = ["encryption", "pem", "std"], optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
cipher = { version = "0.4", features = ["alloc", "block-padding"], optional = true }
md-5 = { version = "0.10", optional = true }
base64ct = { version = "1", features = ["alloc"], optional = true }
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["base64"] }
thiserror = "2"
typetag = "0.2"
tokio = { version = "1", features = ["io-util", "io-std", "sync", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"

[dev-dependencies]
rcgen = "0.13"
