[package]
name = "trustless-protocol"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Protocol utilities for trustless"
homepage = "https://github.com/sorah/trustless"
repository = "https://github.com/sorah/trustless"

[features]
provider-helpers = ["dep:rustls-pki-types", "dep:x509-parser", "rustls/aws_lc_rs"]
encrypted-key = ["provider-helpers", "dep:pkcs8", "dep:aes", "dep:cbc", "dep:cipher", "dep:md-5", "dep:base64ct"]
test-helpers = ["provider-helpers"]

[dependencies]
bytes.workspace = true
rustls.workspace = true
rustls-pki-types = { workspace = true, optional = true }
x509-parser = { workspace = true, optional = true }
pkcs8 = { version = "0.10", features = ["encryption", "pem", "std"], optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
cipher = { version = "0.4", features = ["alloc", "block-padding"], optional = true }
md-5 = { version = "0.10", optional = true }
base64ct = { version = "1", features = ["alloc"], optional = true }
futures-util = { version = "0.3", features = ["sink"] }
secrecy.workspace = true
serde.workspace = true
zeroize.workspace = true
serde_json.workspace = true
serde_with = { version = "3", features = ["base64"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "io-std", "sync", "rt", "macros"] }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
rcgen.workspace = true
