[package]
name = "trustless-provider-failure"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
trustless = { version = "0.1.0", path = "../trustless" }
trustless-protocol.workspace = true
anyhow.workspace = true
clap.workspace = true
secrecy.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
