[package]
name = "trustless-provider-failure"
version = "0.1.0"
edition.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
trustless = { version = "0.3.0-rc2", path = "../trustless" }
trustless-protocol.workspace = true
anyhow.workspace = true
clap.workspace = true
secrecy.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
