[package]
name = "trustless-provider-filesystem"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Filesystem-based key provider for trustless"
homepage = "https://github.com/sorah/trustless"
repository = "https://github.com/sorah/trustless"

[dependencies]
trustless-protocol = { workspace = true, features = ["provider-helpers", "encrypted-key"] }
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
rcgen.workspace = true
secrecy.workspace = true
tempfile = "3"
