[package]
name = "trustless-provider-filesystem"
version = "0.3.1"
edition.workspace = true
license.workspace = true
keywords.workspace = true
description = "Filesystem-based key provider for trustless"
homepage.workspace = true
repository.workspace = true

[dependencies]
trustless-protocol = { workspace = true, features = ["provider-helpers", "encrypted-key"] }
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
trustless-protocol = { workspace = true, features = ["test-helpers"] }
rcgen.workspace = true
secrecy.workspace = true
tempfile = "3"
