[package]
name = "trustless-provider-lambda-function"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
trustless-protocol = { path = "../trustless-protocol", features = ["provider-helpers", "encrypted-key"] }
lambda_runtime = "1.1.0-rc1"
aws-sdk-s3 = "1"
aws-sdk-ssm = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "fmt", "env-filter"] }
rustls-pki-types = { version = "1", features = ["std"] }

[dev-dependencies]
rcgen = "0.13"
aws-smithy-mocks = "0.2"
aws-sdk-s3 = { version = "1", features = ["test-util"] }
aws-sdk-ssm = { version = "1", features = ["test-util"] }
aws-smithy-types = "1"
