[package]
name = "trustless-provider-lambda"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
trustless-protocol.workspace = true
clap.workspace = true
serde.workspace = true
tokio.workspace = true
aws-sdk-lambda = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
