[package]
name = "trustless-provider-lambda"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "AWS Lambda key provider for trustless"
homepage = "https://github.com/sorah/trustless"
repository = "https://github.com/sorah/trustless"

[dependencies]
trustless-protocol.workspace = true
clap.workspace = true
serde.workspace = true
tokio.workspace = true
aws-sdk-lambda = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
