[package]
name = "trustless-provider-lambda"
version = "0.3.0-rc2"
edition.workspace = true
license.workspace = true
keywords.workspace = true
description = "AWS Lambda key provider for trustless"
homepage.workspace = true
repository.workspace = true

[dependencies]
trustless-protocol.workspace = true
clap.workspace = true
serde.workspace = true
tokio.workspace = true
aws-sdk-lambda = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
