[package]
name = "trustless-provider-stub"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
trustless-protocol = { path = "../trustless-protocol" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pki-types = { version = "1", features = ["std"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
