[package]
name = "trustless-provider-stub"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
trustless-protocol = { workspace = true, features = ["provider-helpers", "encrypted-key"] }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
rcgen.workspace = true
tempfile = "3"
