[package]
name = "trustless"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
trustless-protocol = { path = "../trustless-protocol" }
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
daemonize = { version = "0.1.0", package = "daemonix" }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful", "http1", "http2"] }
nix = { version = "0.29", features = ["fs", "signal"] }
parking_lot = "0.12"
process_path = "0.1"
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pki-types = { version = "1", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
x509-parser = "0.16"

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.26"
futures-util = "0.3"

[[example]]
name = "provider_client"

[[example]]
name = "proxy"

[[example]]
name = "tls_server"
