[package]
name = "trustless"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "HTTPS on registrable domains for local development without touching your system trust store"
homepage = "https://github.com/sorah/trustless"
repository = "https://github.com/sorah/trustless"

[dependencies]
trustless-protocol.workspace = true
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
bytes.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
daemonize = { version = "0.1.0", package = "daemonix" }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful", "http1", "http2"] }
nix = { version = "0.29", features = ["fs", "signal", "process"] }
cfg-if = "1"
async-stream = "0.3"
futures-core = "0.3"
parking_lot = "0.12"
process_path = "0.1"
rcgen.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
rustls = { workspace = true, features = ["aws_lc_rs", "logging", "tls12"] }
rustls-pki-types.workspace = true
serde.workspace = true
serde_json.workspace = true
socket2 = "0.5"
thiserror.workspace = true
tokio.workspace = true
tokio-rustls = "0.26"
tokio-stream = { version = "0.1", features = ["signal"] }
tokio-util.workspace = true
tower = { version = "0.5", features = ["util"] }
tracing.workspace = true
tracing-appender = "0.2"
tracing-subscriber.workspace = true
x509-parser.workspace = true

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.26"
futures-util = "0.3"

[[example]]
name = "provider_client"

[[example]]
name = "proxy"

[[example]]
name = "tls_server"
